# fastapi-aiogram-multibot

./: .env.template  .gitignore  README.md  alembic.ini  default.conf  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 591c3a7ba2d9_initial.py  8a3aed2e238b_caution_created_new_table_botorm_.py
src/: config.py
src/app/: Dockerfile  main.py  responses.py  routers.py  schemas.py  services.py  utils.py
src/bots/: handlers.py  main.py  phrases.py  services.py  tasks.py  utils.py
src/bots/core/: managers.py  questions.py
src/bots/db/: crud.py  database.py  models.py  redis_config.py
src/bots/exceptions/: exceptions.py
src/openai_app/: services.py  settings.py
